Se arreglan las cards

--- a/index.html
+++ b/index.html
@@ -65,9 +65,11 @@
     </section>
   </main>
 <hr>
-  <div class="containerC" id="containerCards">
-    <p id="nombrePelicula"></p>
-  </div>
+
+ <div id="contenedorContenedor">
+  <div id="contenedorCards" class="container"></div>
+</div> 
+
 
 
     <footer>
