--- a/index.html
+++ b/index.html
@@ -1,25 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="./style/style.css">
-    <title>Películas para ti</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+  <link rel="stylesheet" href="./style/style.css">
+  <title>Películas para ti</title>
 </head>
 
 <body>
   <header>
-      <div >
+    <div>
       <img id="logo" src="./image/logo.png" alt="Logo">
-        <nav>
-            <ul>
-                <li class="nav-item"> Pagina de inicio</li>
-                <li class="nav-item" ><a href="./pages/registro.html">Registro</a> </li>
-            </ul>
-        </nav>
-      </div>
+      <nav>
+        <ul>
+          <li class="nav-item"> Pagina de inicio</li>
+          <li class="nav-item"><a href="./pages/registro.html">Registro</a> </li>
+        </ul>
+      </nav>
+    </div>
 
   </header>
 
@@ -30,57 +32,65 @@
     </section>
 
     <section class="section-image">
-    <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
-      <div class="carousel-indicators">
-          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
-          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
-      </div>
-      <div class="carousel-inner">
+      <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
+        <div class="carousel-indicators">
+          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
+            aria-current="true" aria-label="Slide 1"></button>
+          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"
+            aria-label="Slide 2"></button>
+          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"
+            aria-label="Slide 3"></button>
+        </div>
+        <div class="carousel-inner">
           <div class="carousel-item active">
-            <img  src="./image/pelicula3.jpg" class="d-block w-100" alt="Acción">
+            <img  class="img-carrusel" src="./image/pelicula3.jpg" class="d-block w-100" alt="Acción">
             <div class="carousel-caption d-none d-md-block">
             </div>
           </div>
           <div class="carousel-item">
-            <img src="./image/pelicula2.jpg" class="d-block w-100" alt="Romance">
+            <img class="img-carrusel" src="./image/pelicula2.jpg" class="d-block w-100" alt="Romance">
             <div class="carousel-caption d-none d-md-block">
             </div>
           </div>
           <div class="carousel-item">
-            <img src="./image/pelicula1.jpg" class="d-block w-100" alt="Terror">
+            <img  class="img-carrusel" src="./image/pelicula1.jpg" class="d-block w-100" alt="Terror">
             <div class="carousel-caption d-none d-md-block">
             </div>
           </div>
-      </div>
-      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
+          data-bs-slide="prev">
           <span class="carousel-control-prev-icon" aria-hidden="true"></span>
           <span class="visually-hidden">Previous</span>
-      </button>
-      <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions"
+          data-bs-slide="next">
           <span class="carousel-control-next-icon" aria-hidden="true"></span>
           <span class="visually-hidden">Next</span>
-      </button>
-    </div>
+        </button>
+      </div>
     </section>
   </main>
-<hr>
+  <hr>
 
- <div id="contenedorContenedor">
-  <div id="contenedorCards" class="container"></div>
-</div> 
-
-
-
-    <footer>
-        <h5 class="footer-title">Todos los derechos reservados - Hecho por Daniela Uribe</h3>
-    </footer>
-
-    
+  <div id="contenedorContenedor">
+      <div id="contenedorCards" class="container"></div>
+  </div>
 
 
-    <script src="./scripts/script.js" type="module"></script>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+  <footer>
+    <h5 class="footer-title">Todos los derechos reservados - Hecho por Daniela Uribe</h3>
+  </footer>
+
+
+
+
+  <script src="./scripts/script.js" type="module"></script>
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+    crossorigin="anonymous"></script>
 </body>
+
 </html>
